--- a/src/css/style-medium.css
+++ b/src/css/style-medium.css
@@ -59,17 +59,16 @@
 		}
 
 		#navButton .toggle:before {
-			background: rgba(144, 144, 144, 0.65);
-			border-radius: 4px;
+			background: rgba(0, 0, 0, 0.4);
 			color: #fff;
 			display: block;
-			font-size: 16px;
+			font-size: 22px;
 			height: 2.25em;
-			left: 0.5em;
+			left: 0;
 			line-height: 2.25em;
 			position: absolute;
 			text-align: center;
-			top: 0.5em;
+			top: 0;
 			width: 3.5em;
 		}
 
@@ -99,6 +98,9 @@
 					#navPanel nav ul li a:not(.button), #navPanel nav ul li span:not(.button) {
 						border-top: solid 1px #555;
 						color: #fff;
+						font-size:18px;
+						font-weight:300;
+						font-family: 'Roboto Condensed';
 						display: block;
 						padding: 0.75em 0;
 						text-decoration: none;
