--- a/src/css/style.less
+++ b/src/css/style.less
@@ -137,7 +137,12 @@ h1, h2, h3, h4, h5, h6 {
         font-family: @mainFont;
         font-weight:400;
     }
-    p { font-size: 1.1em; }
+    p {
+        font-size: 1.1em;
+        font-weight:300;
+        margin-bottom:1em;
+
+    }
     h2 {
         font-size: 2.7em;
         font-weight:400;
@@ -311,6 +316,7 @@ a.button-action, input.button-action {
         display:block;
         color:@defaultTextColor;
         text-decoration: none;
+        margin-bottom:20px;
         .image {
             position:relative;
             margin-bottom: 1em;
