--- a/src/css/style-large.css
+++ b/src/css/style-large.css
@@ -15,3 +15,13 @@
 		#banner h2 {
 			font-size: 3.5em;
 		}
+
+
+    #slider-header .carousel-inner, #slider-header .carousel-inner .item {
+        height: 100%;
+    }
+
+    #slider-header .carousel-inner .item img { height: 100%; }
+    #slider-header, #slider-header .carousel-inner {
+        overflow: hidden;
+    }
