--- a/src/css/style-xlarge.css
+++ b/src/css/style-xlarge.css
@@ -11,3 +11,12 @@
 	#banner {
 		padding: 7em 0;
 	}
+
+    #slider-header .carousel-inner, #slider-header .carousel-inner .item {
+        height: 100%;
+    }
+
+    #slider-header .carousel-inner .item img { height: 100%; }
+    #slider-header, #slider-header .carousel-inner {
+        overflow: hidden;
+    }
